# zipfs_law

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt
docs/source/: conf.py  index.rst
include/: zipfs.h
scripts/: plot_zipf.py
src/: CMakeLists.txt  main_zipfs_algorithm.cpp  main_zipfs_containers.cpp  output.txt  pg2701.txt:Zone.Identifier  zipf
tests/: CMakeLists.txt  test_main_zipfs_container.cpp
